--- a/src/app/cardapio/cardapio.component.html
+++ b/src/app/cardapio/cardapio.component.html
@@ -1,1 +1,28 @@
-<p>cardapio works!</p>
+<div class="container-fluid">
+
+    <div class="row mt-5 justify-content-center">
+        <h1>Cardápio</h1>
+    </div>
+
+    <div class="row justify-content-center">
+            
+        <mat-card class="col-md-3 m-2" *ngFor="let item of cardapio">
+            <mat-card-header>
+                <mat-card-title>{{item.titulo}}</mat-card-title>
+                <mat-card-subtitle>{{item.subtitulo}}</mat-card-subtitle>
+            </mat-card-header>
+            <img mat-card-image [src]="item.img">
+            <mat-card-content>
+                <p>
+                {{item.descricao}}
+                </p>
+            </mat-card-content>
+            <mat-card-actions>
+                <button mat-button>COMPRAR</button>
+                <button mat-button>COMPARTILHAR</button>
+            </mat-card-actions>
+        </mat-card>
+
+    </div>
+</div>
+
