--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container background">
+<div class="container-fluid background">
     <div class="row mt-5">        
         <div class="offset-md-3 col-md-6 conteudo p-5">
             <div class="row justify-content-center">
